--- a/src/styles/Missions.module.css
+++ b/src/styles/Missions.module.css
@@ -10,20 +10,20 @@ th {
   padding: 8px;
 }
 
-td:first-child {
+.missionPage td:first-child {
   font-weight: bold;
 }
 
-td:nth-child(3) {
+.missionPage td:nth-child(3) {
   width: 120px;
 }
 
-td:nth-child(4) {
+.missionPage td:nth-child(4) {
   width: 150px;
   text-align: center;
 }
 
-tr:nth-child(even) {
+.missionPage tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
@@ -67,4 +67,26 @@ button.join {
 button.leave {
   color: #df4553;
   border: 1px solid #df4553;
+}
+
+/* Table on profile page */
+.tablesContainer {
+  padding: 0 2rem;
+}
+
+.tablesContainer p {
+  font-weight: bold;
+}
+
+.profilePage {
+  margin: 0;
+  width: 100%;
+}
+
+.profilePage td {
+  padding: 15px;
+}
+
+.eachTable {
+  width: calc(100% / 3);
 }
