--- a/src/styles/Missions.module.css
+++ b/src/styles/Missions.module.css
@@ -15,7 +15,7 @@ th {
 }
 
 .missionPage td:nth-child(3) {
-  width: 120px;
+  width: 130px;
   text-align: center;
 }
 
@@ -41,7 +41,9 @@ tbody > tr > :nth-child(2) {
   color: #fff;
   font-weight: bold;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  padding: 0.25rem;
 }
 
 button.nonMember {
