--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
   border-radius: 4px;
   border: 1px solid rgb(92, 93, 94);
 }
+
+.reserved {
+  background-color: rgb(31, 165, 165);
+  border-radius: 4px;
+  border: 2px solid rgb(31, 165, 165);
+  color: white;
+  margin-right: 4px;
+}
