Add Reserved Rockets section to MyProfile

--- a/src/styles/Missions.module.css
+++ b/src/styles/Missions.module.css
@@ -72,6 +72,9 @@ button.leave {
 /* Table on profile page */
 .tablesContainer {
   padding: 0 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
 }
 
 .tablesContainer p {
