--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,22 +1,20 @@
 .header {
   background-color: #fff;
   border-bottom: 1.5px solid #e8e8e8;
-  padding: 0 2rem;
+  padding: 1rem 2rem;
   align-items: center;
   justify-content: space-between;
   display: flex;
-  flex-direction: row;
 }
 
 .header img {
   width: 4rem;
   height: 4rem;
-  margin-top: 13px;
 }
 
 .header div {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   gap: 10px;
 }
