--- a/src/styles/Dragon.module.css
+++ b/src/styles/Dragon.module.css
@@ -1,41 +1,16 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-.dragonsContainer {
-  height: 100vh;
-  width: 100%;
-  margin-top: 0.25rem;
-  margin-left: 1rem;
-}
-
 .container {
-  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  gap: 0.25rem;
 }
 
-.container img {
-  height: 25vh;
+.article img {
   width: 225px;
   margin-left: 43px;
   margin-top: 17px;
 }
 
-.desk {
+.desc {
   margin-left: 17px;
-}
-
-p {
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
 }
 
 .reserve {
@@ -45,7 +20,6 @@ p {
   background-color: rgb(47, 103, 245);
   border-radius: 4px;
   border: 1px solid rgb(47, 103, 245);
-  margin-top: 0.25rem;
 }
 
 .cancel {
@@ -55,4 +29,12 @@ p {
   background-color: rgb(255, 255, 255);
   border-radius: 4px;
   border: 1px solid rgb(92, 93, 94);
+}
+
+.reserved {
+  background-color: rgb(31, 165, 165);
+  border-radius: 4px;
+  border: 2px solid rgb(31, 165, 165);
+  color: white;
+  margin-right: 4px;
 }
